chore: add TODO.md for project roadmap tracking

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -217,8 +217,9 @@ if(Doxygen_FOUND)
 	# --- Documentation Target Definition ---
 	doxygen_add_docs(documentation
 		${NFX_STRINGBUILDERPOOL_INCLUDE_DIR}/nfx
-		${NFX_STRINGBUILDERPOOL_DIR}/README.md
 		${NFX_STRINGBUILDERPOOL_DIR}/CHANGELOG.md
+		${NFX_STRINGBUILDERPOOL_DIR}/README.md
+		${NFX_STRINGBUILDERPOOL_DIR}/TODO.md
 		${NFX_STRINGBUILDERPOOL_DIR}/benchmark/README.md
 		${NFX_STRINGBUILDERPOOL_LICENSE_FILE}
 		ALL
